After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749462 - Segfault copying from invalid mount point
Segfault copying from invalid mount point
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: client module
1.25.x
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2015-05-16 07:13 UTC by Ross Lagerwall
Modified: 2015-05-20 06:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
client: Always set path[12]_out in create_proxy_for_file2 (1.70 KB, patch)
2015-05-16 07:17 UTC, Ross Lagerwall
committed Details | Review

Description Ross Lagerwall 2015-05-16 07:13:05 UTC
$ gvfs-copy --progress smb://host/unmounted/a smb://host/unmounted/b
Segmentation fault (core dumped)
Comment 1 Ross Lagerwall 2015-05-16 07:17:18 UTC
Created attachment 303459 [details] [review]
client: Always set path[12]_out in create_proxy_for_file2

d59e6873086f ("Fix 'path[12]_out' leak in file_transfer()") assumed that
path[12]_out were always set by create_proxy_for_file2 but this is not
always the case. Fix it so that create_proxy_for_file2 always sets
path[12]_out.

To reproduce the bug:
$ gvfs-copy --progress smb://host/unmounted/a smb://host/unmounted/b
Segmentation fault (core dumped)
Comment 2 Ondrej Holy 2015-05-18 12:14:16 UTC
Review of attachment 303459 [details] [review]:

Looks good!
Comment 3 Ross Lagerwall 2015-05-20 06:44:25 UTC
Pushed to master as e7e6e1cde38f935e04e3e9d651eacf57557ff0c5 and stable as 725eaa2e33a842f812caf59af8a8766461bf9512. Thanks for the reviews!
Comment 4 Ross Lagerwall 2015-05-20 06:46:44 UTC
Sorry, I commented on the wrong bug. But anyway, pushed to master as 7056e01cceea3e6a8970c1fc4637ad959e7cd3de. Thanks for the review!